[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/data/BeepCube.mesh" type="ArrayMesh" id=1]
[ext_resource path="res://game/BeepCube.gd" type="Script" id=2]
[ext_resource path="res://game/BeepCube_new_material.material" type="Material" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.2, 0.2, 0.2 )

[sub_resource type="Animation" id=2]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -2 ), Vector3( 0, 0, 0 ), Vector3( 0, 0.5, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -180 ), Vector3( 0, 0, -180 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.1, 0.1, 0.1 ), Vector3( 0.1, 0.1, 0.1 ), Vector3( 1, 1, 1 ) ]
}

[node name="BeepCube" type="Spatial"]
script = ExtResource( 2 )

[node name="CubeMeshOrientation" type="Spatial" parent="."]

[node name="BeepCube_Area" type="Area" parent="CubeMeshOrientation" groups=[
"beepcube",
]]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape" type="CollisionShape" parent="CubeMeshOrientation/BeepCube_Area"]
shape = SubResource( 1 )

[node name="CubeMeshAnimation" type="Spatial" parent="CubeMeshOrientation"]

[node name="BeepCube_Mesh" type="MeshInstance" parent="CubeMeshOrientation/CubeMeshAnimation"]
transform = Transform( 0.8, 0, 0, 0, 0.8, 0, 0, 0, 0.8, 0, 0, 0 )
material_override = ExtResource( 3 )
mesh = ExtResource( 1 )
material/0 = null

[node name="AnimationPlayer" type="AnimationPlayer" parent="CubeMeshOrientation/CubeMeshAnimation"]
anims/Spawn = SubResource( 2 )
